# vx

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml
npm/vx/: README.md  package.json
npm/vx-darwin-arm64/: README.md  index.js  package.json
npm/vx-darwin-x64/: README.md  package.json
npm/vx-linux-arm64-gnu/: README.md  package.json
npm/vx-linux-x64-gnu/: LICENSE  README.md  package.json
npm/vx-win32-x64-msvc/: LICENSE  README.md  index.js  package.json
npm/vx/lib/: run.js
scripts/: build-npm-binary.cjs
scripts/ci/: compute-canary-version.js  set-canary-version-with-deps.js  set-canary-version.js
src/: app.rs  cli.rs  fsutil.rs  integrity.rs  lib.rs  lockfile.rs  main.rs  manifest.rs  npm_semver.rs  paths.rs  registry.rs  resolver.rs  state.rs  store.rs
