[package]
name = "vx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
futures = "0.3"
percent-encoding = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["brotli", "deflate", "gzip", "http2", "json", "rustls-tls", "stream"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
tar = "0.4"
tempfile = "3.10"
tokio = { version = "1.43", features = ["fs", "io-util", "macros", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
walkdir = "2.5"
indicatif = "0.17"
console = "0.15"

[target.'cfg(windows)'.dependencies]
junction = "1.3.0"
